--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
