Deploy app from main branch

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,9 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "main -d build"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
